--- a/public/styles.css
+++ b/public/styles.css
@@ -162,18 +162,29 @@ q:after {
     height: 100px;
 }
 
+/*
+html {
+    height: 100vh;
+}
+*/
+
 #main {
     width: 960px;
+    height: 100%;
     margin: 0 auto;
+
 }
 
 nav {
     width: 240px;
     float: left;
+    position: fixed;
 }
 
 .content {
     width: 720px;
     text-align: center;
-    margin-top: 50px;
+    float: right;
+    margin-top: 10px;
+    padding: 20px;
 }
