--- a/public/styles.css
+++ b/public/styles.css
@@ -154,37 +154,67 @@ q:after {
 
 .nav_button {
     font-family: 'Bad Script', cursive;
-    border: 1px solid;
+    font-weight: bold;
+    font-size: 16px;
     padding: 10px;
+    padding-top: 40px;
     text-align: center;
     list-style-type: none;
-    margin: 10px;
-    height: 100px;
+/*    margin: 10px;*/
+    height: 150px;
+    background-image: url(images/Button.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: contain;
 }
 
-/*
-html {
-    height: 100vh;
+.acent {
+    background-image: url(images/Button_acent.svg);
 }
-*/
+
+.nav_button:hover {
+    font-size: 20px;
+}
+
+html {
+    font-family: 'Alegreya', serif;
+    line-height: 30px;
+    font-size: 20px;
+}
+
+p {
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+h1 {
+    margin-top: 50px;
+}
 
 #main {
     width: 960px;
-    height: 100%;
+/*    height: 100%;*/
     margin: 0 auto;
-
 }
 
 nav {
     width: 240px;
-    float: left;
     position: fixed;
 }
 
 .content {
     width: 720px;
     text-align: center;
-    float: right;
-    margin-top: 10px;
+    margin-top: 25px;
     padding: 20px;
+    min-height: 95vh;
+    border: 1px solid;
+    border-radius: 5px;
+    box-shadow: 3px 3px 5px black;
+/*    overflow-y: auto;*/
+}
+
+.bg_div {
+    float: right;
+    background: url(images/note.svg) left top repeat-x;
 }
