Добавил компонент Photo. Поработал над дизайном основного контента

--- a/public/styles.css
+++ b/public/styles.css
@@ -160,7 +160,6 @@ q:after {
     padding-top: 40px;
     text-align: center;
     list-style-type: none;
-/*    margin: 10px;*/
     height: 150px;
     background-image: url(images/Button.svg);
     background-repeat: no-repeat;
@@ -180,20 +179,26 @@ html {
     font-family: 'Alegreya', serif;
     line-height: 30px;
     font-size: 20px;
+    
 }
 
 p {
     margin-top: 10px;
     margin-bottom: 10px;
+    font-size: 16px;
 }
 
 h1 {
     margin-top: 50px;
+    font-size: 28px;
+}
+
+h2 {
+    font-size: 20px;
 }
 
 #main {
     width: 960px;
-/*    height: 100%;*/
     margin: 0 auto;
 }
 
@@ -203,18 +208,29 @@ nav {
 }
 
 .content {
+    float: right;
     width: 720px;
     text-align: center;
     margin-top: 25px;
     padding: 20px;
     min-height: 95vh;
     border: 1px solid;
+    border-top: none;
     border-radius: 5px;
     box-shadow: 3px 3px 5px black;
-/*    overflow-y: auto;*/
+    background: url(images/cel.svg), url(images/note.svg) repeat-x top left / 36px auto;
 }
 
-.bg_div {
-    float: right;
-    background: url(images/note.svg) left top repeat-x;
+.content li {
+    list-style: none;
+    background: url(images/marker.svg) no-repeat left / contain;
+    text-align: left;
+    padding-left: 20px;
+}
+
+.photo {
+    border: 1px solid;
+    border-radius: 5px;
+    box-shadow: 3px 3px 5px black;
+    margin: 10px;
 }
