--- a/public/styles.css
+++ b/public/styles.css
@@ -328,3 +328,130 @@ li {
     display: inline-block;
     margin-left: 20px;
 }
+
+@media (min-width:769px) and (max-width:956px) {
+    #main {
+        width: 768px;
+        background: red;
+    }
+    
+    .content {
+        width: 576px;
+    }
+    
+    nav {
+        width: 192px;
+    }
+    
+}
+
+@media (min-width:421px) and (max-width:768px) {
+    html {
+        font-size: 10px;
+    }
+    
+    #main {
+        width: 420px;
+    }
+    
+    .content {
+        width: 420px;
+        float: none;
+        margin-top: 0;
+    }
+    
+    nav {
+        width: 420px;
+        height: 80px;
+        position: relative;
+    }
+    
+    .nav_button {
+        height: 80px;
+        font-size: 10px;
+    }
+    
+    .nav_button:hover {
+        font-size: 12px;
+    }
+    
+    nav li {
+        display: inline-block;
+    }
+    
+    p {
+        font-size: 12px;
+    }
+
+    h1 {
+        margin-top: 50px;
+        font-size: 20px;
+    }
+
+    h2 {
+        font-size: 16px;
+    }
+    
+    .message {
+        padding: 20px;
+        width: 240px;
+        height: 240px;
+        top: 120px;
+        position: fixed;
+         
+    }
+    
+    .messageBG {
+        left: 100px;
+    }
+    
+}
+
+@media (max-width:420px) {
+    html {
+        font-size: 10px;
+    }
+    
+    #main {
+        width: 420px;
+    }
+    
+    .content {
+        width: 420px;
+        float: none;
+        margin-top: 0;
+    }
+    
+    nav {
+        width: 420px;
+        height: 80px;
+        position: relative;
+    }
+    
+    .nav_button {
+        height: 80px;
+        font-size: 8px;
+    }
+    
+    .nav_button:hover {
+        font-size: 10px;
+    }
+    
+    nav li {
+        display: inline-block;
+    }
+    
+    p {
+        font-size: 12px;
+    }
+
+    h1 {
+        margin-top: 50px;
+        font-size: 16px;
+    }
+
+    h2 {
+        font-size: 12px;
+    }
+    
+}
